Add Bootstrap v5.3.3 to the project

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,7 @@
-div {
-  font-size: larger;
+@font-face {
+  font-family: "FiraSans";
+  src: local("Fira Sans"), url("@/assets/FiraSans.ttf");
+}
+* {
+  font-family: "Fira Sans";
 }
